modules/mod_emundus_campaign/css/mod_emundus_campaign_tchooz.css
/* ... */
.mod_emundus_campaign__pinned_campaign {
    display: grid;
    align-items: flex-start;
    padding: 0;
    gap: var(--p-32);
}

.mod_emundus_campaign__pinned_campaign .mod_emundus_campaign__list_content {
    height: 330px;
}

.mod_emundus_campaign__pinned_campaign .mod_emundus_campaign__list_content_resume {
    -webkit-line-clamp: 3;
    max-height: 100px;
    line-height: 160%;
}

.single-campaign div a {
    text-decoration: underline;
}

.single-campaign div a:hover {
    text-decoration: none;
}

.tchooz-single-campaign #campaign p {
    line-height: normal;
    color: var(--neutral-900);
    font-family: var(--em-applicant-font);
}


.tchooz-single-campaign #campaign *:not(a) {
    color: var(--neutral-900);
    font-family: var(--em-profile-font), Inter, sans-serif;
}

.tchooz-single-campaign #campaign table td  {
    border: 1px solid #dce2e9;
}

.tchooz-single-campaign #campaign table thead > tr > * {
    background: #ccc;
}

.mod_emundus_campaign__grid {
    display: grid;
    grid-gap: 0;
    grid-template-columns: 64% 30%;
    align-items: start;

    aside {
        align-self: start;
    }
}

@media (max-width: 479px) {

    .mod_emundus_campaign__header_filter__values {
        margin-left: 0 !important;
        min-width: 86vw;
        max-width: 88vw;
    }

    .mod_emundus_campaign__content [class*="size-"] {
        flex-basis: auto !important;
    }

    .mod_emundus_campaign__pinned_campaign {
        grid-template-columns: repeat(1, 1fr);
    }

    .mod_emundus_campaign__intro {
        width: 100%;
    }

    .mod_emundus_campaign__pinned_campaign {
        width: 100%;
    }

    .mod_emundus_campaign__list_items {
        grid-template-columns: repeat(1, 1fr);
    }

    .mod_emundus_campaign__grid {
        grid-template-columns: 100%;
    }

}

@media (min-width: 480px) and (max-width: 767px) {
    .mod_emundus_campaign__pinned_campaign .mod_emundus_campaign__list_content {
        height: 360px;
    }

    .mod_emundus_campaign__list_content {
        height: 380px;
    }

    .mod_emundus_campaign__list_items {
        grid-template-columns: repeat(2, 1fr);
    }

    .mod_emundus_campaign__searchbar {
        margin-top: var(--m-16);
    }

    .mod_emundus_campaign__intro {
        width: 100%;
    }

    .mod_emundus_campaign__pinned_campaign {
        grid-template-columns: repeat(1, 1fr);
    }

    .em-flex-row {
        flex-wrap: wrap;
    }

    .mod_emundus_campaign__list_content .em-font-size-16 {
        flex-basis: auto !important;
    }

    .mod_emundus_campaign__grid {
        grid-template-columns: 94% !important;
    }

    .mod_emundus_campaign__content .mod_emundus_campaign__pinned_campaign {
        width: 100%;
    }

    .mod_emundus_campaign__buttons {
        flex-direction: column !important;
    }

    .mod_emundus_campaign__buttons button:nth-child(2) {
        margin-top: var(--m-16);
    }

    .mod_emundus_campaign__header_filter, .mod_emundus_campaign__header input[name="searchword"] {
        margin-top: var(--m-4);
    }

    body.gantry .mod_emundus_campaign__grid .em-flex-row .em-font-size-16 {
        flex-basis: auto;
    }
}

@media screen and (min-width: 768px) and (max-width: 959px) {
    .mod_emundus_campaign__list_content {
        height: 380px;
    }

    .mod_emundus_campaign__list_items {
        grid-template-columns: repeat(2, 1fr);
    }

    .mod_emundus_campaign__searchbar {
        margin-top: var(--m-16);
    }

    .mod_emundus_campaign__intro {
        width: 89%;
    }

    .mod_emundus_campaign__pinned_campaign {
        grid-template-columns: repeat(1, 1fr);
    }

    .em-flex-row {
        flex-wrap: wrap;
    }

    .mod_emundus_campaign__list_content .em-font-size-16 {
        flex-basis: auto !important;
    }

    .mod_emundus_campaign__grid {
        grid-template-columns: 94% !important;
    }

    .mod_emundus_campaign__content .mod_emundus_campaign__pinned_campaign {
        width: 100%;
    }

    .mod_emundus_campaign__buttons {
        flex-direction: column !important;
    }

    .mod_emundus_campaign__buttons button:nth-child(2) {
        margin-top: var(--m-16);
    }

    .mod_emundus_campaign__header_filter, .mod_emundus_campaign__header input[name="searchword"] {
        margin-top: var(--m-4);
    }

    body.gantry .mod_emundus_campaign__grid .em-flex-row .em-font-size-16 {
        flex-basis: auto;
    }

    .mod_emundus_campaign__intro {
        max-width: 680px;
    }

    .mod_emundus_campaign__content .mod_emundus_campaign__list_content,
    .mod_emundus_campaign__header {
        width: 100%;
    }

    #g-container-main .g-container {
        width: 44rem;
    }
}

@media screen and (min-width: 960px) and (max-width: 1080px) {
    .mod_emundus_campaign__content .mod_emundus_campaign__list_items {
        grid-template-columns: repeat(2, 1fr);
    }

    #g-container-main .g-container {
        width: 56rem;
    }
}

@media screen and (min-width: 1081px) and (max-width: 1199px) {
    .mod_emundus_campaign__content .mod_emundus_campaign__list_items {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media screen and (max-width: 1024px) {
    .mod_emundus_campaign__pinned_campaign .mod_emundus_campaign__list_content,
    .mod_emundus_campaign__list_items .mod_emundus_campaign__list_content {
        height: 100%;
    }
}

@media screen and (max-width: 959px) {
    .mod_emundus_campaign__list_content--default .em-flex-row-justify-end {
        flex-direction: column;
        gap: 8px;
    }
}

